<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroupConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioContaPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_conta_poupanca" />

        <RadioButton
            android:id="@+id/radioContaEspecial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_conta_especial" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_valor"
        android:inputType="numberDecimal"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonSacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sacar"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonDepositar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_depositar"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonCalcularRendimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calcular_rendimento"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/buttonMostrarDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_mostrar_dados"
        android:layout_marginTop="8dp" />

    <!-- Exibição de resultado -->
    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:background="#f0f0f0" />
</LinearLayout>
